tests/ui/generator/print/generator-print-verbose-1.no_drop_tracking.stderr
error: generator cannot be sent between threads safely
  --> $DIR/generator-print-verbose-1.rs:40:18
   |
LL |     require_send(send_gen);
   |                  ^^^^^^^^ generator is not `Send`
   |
   = help: the trait `Sync` is not implemented for `RefCell<i32>`
   = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
note: generator is not `Send` as this value is used across a yield
  --> $DIR/generator-print-verbose-1.rs:38:9
   |
LL |         let _non_send_gen = make_non_send_generator();
   |             ------------- has type `Opaque(DefId(0:34 ~ generator_print_verbose_1[749a]::make_non_send_generator::{opaque#0}), [])` which is not `Send`
LL |         yield;
   |         ^^^^^ yield occurs here, with `_non_send_gen` maybe used later
LL |     };
   |     - `_non_send_gen` is later dropped here
note: required by a bound in `require_send`
  --> $DIR/generator-print-verbose-1.rs:29:25
   |
LL | fn require_send(_: impl Send) {}
   |                         ^^^^ required by this bound in `require_send`

error[E0277]: `RefCell<i32>` cannot be shared between threads safely
  --> $DIR/generator-print-verbose-1.rs:59:18
   |
LL |     require_send(send_gen);
   |     ------------ ^^^^^^^^ `RefCell<i32>` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Sync` is not implemented for `RefCell<i32>`
   = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
   = note: required for `Arc<RefCell<i32>>` to implement `Send`
note: required because it's used within this generator
  --> $DIR/generator-print-verbose-1.rs:45:5
   |
LL |     || {
   |     ^^
note: required because it appears within the type `Opaque(DefId(0:35 ~ generator_print_verbose_1[749a]::make_gen2::{opaque#0}), [Arc<RefCell<i32>>])`
  --> $DIR/generator-print-verbose-1.rs:44:30
   |
LL | pub fn make_gen2<T>(t: T) -> impl Generator<Return = T> {
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `Opaque(DefId(0:36 ~ generator_print_verbose_1[749a]::make_non_send_generator2::{opaque#0}), [])`
  --> $DIR/generator-print-verbose-1.rs:50:34
   |
LL | fn make_non_send_generator2() -> impl Generator<Return = Arc<RefCell<i32>>> {
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required because it captures the following types: `Opaque(DefId(0:36 ~ generator_print_verbose_1[749a]::make_non_send_generator2::{opaque#0}), [])`, `()`
note: required because it's used within this generator
  --> $DIR/generator-print-verbose-1.rs:55:20
   |
LL |     let send_gen = || {
   |                    ^^
note: required by a bound in `require_send`
  --> $DIR/generator-print-verbose-1.rs:29:25
   |
LL | fn require_send(_: impl Send) {}
   |                         ^^^^ required by this bound in `require_send`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
